fix: toolbar button size and gap

--- a/src/styles/toolbar.scss
+++ b/src/styles/toolbar.scss
@@ -18,12 +18,12 @@
     justify-content: flex-start;
     align-items: center;
     padding: 2% 4%;
-    gap: 20px;
+    gap: 17px;
   }
 
   .quick-action-button {
-    height: 1rem;
-    width: 1rem;
+    height: 0.85rem;
+    width: 0.85rem;
     border-radius: 50%;
     // margin: 0% 1%;
 
